# floppylabs-nft-staking

./: .gitignore  Anchor.toml  README.md  config.json  deleteme_deploy.json  deployments.json  mainnet.config.json  package-lock.json  package.json
assets/: devnetMints.json  mainnetMints.json
migrations/: deploy.ts
programs/staking/: Cargo.toml
programs/staking/src/: errors.rs  fees_wallet.rs  fl_auth_wallet.rs  fl_collection.rs  lib.rs
programs/staking/src/instructions/: claim_staking.rs  init_jungle.rs  init_staking.rs  migrate_escrow.rs  migrate_staking.rs  mod.rs  set_fees_exempt.rs  set_jungle.rs  set_staking.rs  stake_animal.rs  stake_meta.rs  stake_mpl.rs  stake_nft.rs  stake_ocp.rs  unstake_animal.rs  unstake_meta.rs  unstake_mpl.rs  unstake_mpl_custodial.rs  unstake_nft.rs  unstake_ocp.rs  withdraw_rewards.rs
scripts/: get_accounts.ts  initialize.ts  migrateEscrow.ts  migrateStaking.ts  reset.ts  setFeesExempt.ts  transferRewards.ts  withdrawRewards.ts
test-ledger/: faucet-keypair.json
test-ledger/rocksdb/: IDENTITY  LOG
tests/: jungle.ts  staking.ts
tests/helpers/: index.ts  merkleTree.ts  metaplexUtils.ts  ocpUtils.ts
tests/suites/: claimRewards.ts  initJungle.ts  initStaking.ts  migrateEscrow.ts  setFeesExempt.ts  setJungle.ts  setStaking.ts  stakeAnimal.ts  stakeMeta.ts  stakeMpl.ts  stakeNft.ts  stakeOcp.ts  unstakeAnimal.ts  unstakeMeta.ts  unstakeMpl.ts  unstakeMplCustodial.ts  unstakeNft.ts  unstakeOcp.ts  withdrawRewards.ts
