[package]
name = "staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
production = []
default = ["no-idl"]

[dependencies]
solana-program = "1.10.40"
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
thiserror = "1.0.30"
pyth-client = "0.2.2"
spl-token = { version = "^3.3.1", features = ["no-entrypoint"] }
open_creator_protocol = { version = "0.3.2", features = ["cpi"] }
mpl-token-metadata = "1.8.1"